Added the theme ,notification and other task detail funtionality and the entire app is working state

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="ok">OK</string>
     <string name="error_generic">An error occurred. Please try again.</string>
 
-    <!-- Date/Time formatting strings -->
+     <!-- Date/Time formatting strings -->
     <string name="date_time_format_item" translatable="false">MMM dd, hh:mm a</string>
     <string name="due_date_prefix_item">Due: %1$s</string>
     <string name="date_time_format_display" translatable="false">MMM dd, yyyy \'at\' hh:mm a</string>
@@ -138,6 +138,7 @@
     <string name="category_tomorrow">Tomorrow</string>
     <string name="category_upcoming">Upcoming</string>
     <string name="category_completed">Completed</string>
+    <string name="category_high_priority">High Priority</string>
 
     <!-- Theme Strings -->
     <string name="dark_mode">Dark Mode</string>
@@ -155,4 +156,22 @@
     <string name="snooze_success">Task snoozed until %1$s</string>
     <string name="snooze_cancel">Don\'t snooze</string>
     <string name="snooze_options_list_description">List of snooze duration options</string>
+    <string name="action_reset">Reset</string>
+    <string name="notification_sound_mode_label">Sound Mode</string>
+
+    <!-- Settings -->
+    <string name="settings">Settings</string>
+    <string name="settings_saved">Settings have been saved successfully.</string>
+
+    <!-- Permission Dialog Strings -->
+    <string name="permission_required_title">Permission Required</string>
+    <string name="post_notifications_permission_rationale">Notification permission is required to show task reminders. Please grant the permission in the app settings.</string>
+    <string name="permission_dialog_grant">Grant</string>
+    <string name="permission_dialog_deny">Deny</string>
+
+    <!-- Snooze Duration Toast Messages -->
+    <string name="snooze_duration_empty_default">Snooze duration is empty, using default.</string>
+    <string name="snooze_duration_invalid_default">Invalid snooze duration, using default.</string>
+    <string name="snooze_duration_invalid_format">Invalid number format for snooze duration.</string>
+    <string name="save">Save</string>
 </resources>
